# shopping_list

./: CMakeLists.txt  Container.h  List.cpp  List.h  Product.cpp  Product.h  Product_per_litr.cpp  Product_per_litr.h  Product_per_pieces.cpp  Product_per_pieces.h  Product_per_weight.cpp  Product_per_weight.h  main.cpp  stdin1.txt
