cmake_minimum_required(VERSION 3.17)
project(BerdzikSzymon-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(BerdzikSzymon-etap3 main.cpp List.cpp List.h Product.cpp Product.h Product_per_litr.cpp Product_per_weight.cpp Product_per_weight.h Product_per_pieces.cpp Product_per_pieces.h Product_per_litr.h Container.h)